--- a/apps/fita-a-fita-frontend/src/layouts/Header.astro
+++ b/apps/fita-a-fita-frontend/src/layouts/Header.astro
@@ -1,3 +1,9 @@
+---
+const user = {
+    name: 'John Doe',
+    photo: 'john-doe.jpg',  
+}; // TODO: get user from server
+---
 <header class="relative h-[95vh] bg-gradient-to-br from-green-400 to-green-600 clip-path-polygon">
     <nav class="flex justify-between items-center h-[9rem] w-full px-16">
         <div class="flex items-center">
