--- a/apps/fita-a-fita-frontend/src/layouts/Footer.astro
+++ b/apps/fita-a-fita-frontend/src/layouts/Footer.astro
@@ -6,35 +6,35 @@
         <li class="inline-block mx-6">
             <a
                 href="#"
-                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-green-500 hover:shadow-lg hover:rotate-5 hover:scale-125"
+                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-primary hover:rotate-5 hover:scale-125"
                 >About us</a
             >
         </li>
         <li class="inline-block mx-6">
             <a
                 href="#"
-                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-green-500 hover:shadow-lg hover:rotate-5 hover:scale-125"
+                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-primary hover:rotate-5 hover:scale-125"
                 >Download apps</a
             >
         </li>
         <li class="inline-block mx-6">
             <a
                 href="#"
-                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-green-500 hover:shadow-lg hover:rotate-5 hover:scale-125"
+                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-primary hover:rotate-5 hover:scale-125"
                 >Become a guide</a
             >
         </li>
         <li class="inline-block mx-6">
             <a
                 href="#"
-                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-green-500 hover:shadow-lg hover:rotate-5 hover:scale-125"
+                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-primary hover:rotate-5 hover:scale-125"
                 >Careers</a
             >
         </li>
         <li class="inline-block mx-6">
             <a
                 href="#"
-                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-green-500 hover:shadow-lg hover:rotate-5 hover:scale-125"
+                class="text-gray-600 no-underline uppercase inline-block transition-all duration-200 hover:text-primary hover:rotate-5 hover:scale-125"
                 >Contact</a
             >
         </li>
