--- a/apps/fita-a-fita-frontend/src/layouts/Header.astro
+++ b/apps/fita-a-fita-frontend/src/layouts/Header.astro
@@ -2,13 +2,14 @@
 import UserLoged from '../components/UserLoged.astro';
 ---
 
-<header class="relative bg-gradient-to-br from-green-400 to-green-600">
-    <nav class="flex justify-between items-center h-[9rem] w-full px-16">
+<!-- Change color to darkgrat -->
+<header class="relative bg-gradient-to-br from-zinc-900 to-zinc-800">
+    <nav class="flex justify-between items-center h-[6rem] w-full px-16">
         <div class="flex items-center">
             <a href="/" class="text-white text-lg font-medium hover:text-green-200 transition-colors">ALL TOURS</a>
         </div>
 
-        <div class="absolute left-1/2 top-8 -translate-x-1/2">
+        <div class="absolute left-1/2 top-4 -translate-x-1/2">
             <img src="/img/logo-white.png" alt="Fita a Fita logo" class="h-16" />
         </div>
 
