--- a/apps/fita-a-fita-frontend/src/layouts/Layout.astro
+++ b/apps/fita-a-fita-frontend/src/layouts/Layout.astro
@@ -10,6 +10,7 @@ import Header from './Header.astro';
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
+        <link rel="icon" href="/img/favicon.ico" />
         <title>Fita a Fita</title>
     </head>
     <body>
