--- a/apps/fita-a-fita-frontend/src/pages/tour/[tourId].astro
+++ b/apps/fita-a-fita-frontend/src/pages/tour/[tourId].astro
@@ -4,33 +4,26 @@ import { getBackendUrl } from '../../utils/env';
 import LeafletMap from '../../components/Leaflet.astro';
 
 const { tourId } = Astro.params;
-const jwt = Astro.cookies.get('jwt')?.value;
-
-if (!jwt) {
-    return Astro.redirect('/');
-}
 
 const response =
     (await fetch(`${getBackendUrl()}/tour/${tourId}`, {
         credentials: 'include',
-        headers: {
-            Cookie: `jwt=${jwt}`,
-        },
     }).then((res) => res.json())) || {};
 
 if (response.status === 'error') {
     return Astro.redirect('/');
 }
 
+const user = (await Astro.session?.get('user')) || null;
 const { tour } = response;
 
 export const prerender = false;
 ---
 
 <Layout>
-    <section class="relative h-[38vw] clip-path-tour">
+    <section class="relative h-[calc(100vh-9vw)] clip-path-tour z-40">
         <div class="h-full">
-            <div class="absolute inset-0 bg-gradient-to-br from-green-400 to-green-600 opacity-85"></div>
+            <div class="absolute inset-0 bg-gradient-to-br from-primary to-primary/55 opacity-55"></div>
             <img
                 class="h-full w-full object-cover object-[50%_25%]"
                 src={`${getBackendUrl()}/img/tours/${tour.imageCover}`}
@@ -40,9 +33,7 @@ export const prerender = false;
 
         <div class="absolute bottom-[13vw] left-1/2 top-[35%] -translate-x-1/2 -translate-y-1/2">
             <h1 class="text-5xl text-center text-white uppercase font-light w-[70%] mx-auto">
-                <span class="inline-block bg-gradient-to-br from-green-400/85 to-green-600/85 px-6 py-4"
-                    >{tour.name}</span
-                >
+                <span class="inline-block bg-gradient-to-br from-primary/85 to-primary/85 px-6 py-4">{tour.name}</span>
             </h1>
             <div class="mt-12 flex items-center justify-center text-gray-100">
                 <div class="flex items-center text-2xl font-bold uppercase">
@@ -60,82 +51,89 @@ export const prerender = false;
             </div>
         </div>
     </section>
+    <section class="mt-[-9vw] bg-gray-50 h-full relative z-30 clip-path-tour">
+        <div class="flex w-full">
+            <div class="flex-1 bg-zinc-100 py-56 h-full relative content-center min-h-100vh">
+                <div class="flex flex-col h-full text-center items-center justify-center">
+                    <div class="mx-8">
+                        <h2
+                            class="mb-14 text-3xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-primary to-primary"
+                        >
+                            Quick facts
+                        </h2>
+                        <div class="flex items-center text-2xl mb-9">
+                            <svg class="mr-5 h-9 w-9 text-primary">
+                                <use xlink:href="/img/icons.svg#icon-calendar"></use>
+                            </svg>
+                            <span class="mr-9 font-bold uppercase text-lg">Next date</span>
+                            <span class="capitalize">
+                                {
+                                    new Date(tour?.startDates[0]).toLocaleString('en-us', {
+                                        month: 'long',
+                                        year: 'numeric',
+                                    })
+                                }
+                            </span>
+                        </div>
+                        <div class="flex items-center text-2xl mb-9">
+                            <svg class="mr-5 h-9 w-9 text-primary">
+                                <use xlink:href="/img/icons.svg#icon-trending-up"></use>
+                            </svg>
+                            <span class="mr-9 font-bold uppercase text-lg">Difficulty</span>
+                            <span class="capitalize">{tour?.difficulty}</span>
+                        </div>
+                        <div class="flex items-center text-2xl mb-9">
+                            <svg class="mr-5 h-9 w-9 text-primary">
+                                <use xlink:href="/img/icons.svg#icon-user"></use>
+                            </svg>
+                            <span class="mr-9 font-bold uppercase text-lg">Participants</span>
+                            <span class="capitalize">{tour?.maxGroupSize} people</span>
+                        </div>
+                        <div class="flex items-center text-2xl mb-9">
+                            <svg class="mr-5 h-9 w-9 text-primary">
+                                <use xlink:href="/img/icons.svg#icon-star"></use>
+                            </svg>
+                            <span class="mr-9 font-bold uppercase text-lg">Rating</span>
+                            <span class="capitalize">{tour?.ratingsAverage} / 5</span>
+                        </div>
+                    </div>
 
-    <section class="mt-[-9vw] flex bg-gray-50">
-        <div class="flex w-full px-[8vw] pt-[14vw] pb-[calc(1vw+9vw)]">
-            <div class="flex-1">
-                <div class="bg-gray-100 p-8">
-                    <h2
-                        class="mb-14 text-3xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-green-600"
-                    >
-                        Quick facts
-                    </h2>
-                    <div class="flex items-center text-2xl mb-9">
-                        <svg class="mr-5 h-9 w-9 text-green-500">
-                            <use xlink:href="/img/icons.svg#icon-calendar"></use>
-                        </svg>
-                        <span class="mr-9 font-bold uppercase text-lg">Next date</span>
-                        <span class="capitalize">
-                            {new Date(tour?.startDates[0]).toLocaleString('en-us', { month: 'long', year: 'numeric' })}
-                        </span>
+                    <div class="mt-auto mx-8">
+                        <h2
+                            class="mb-14 text-3xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-primary to-primary"
+                        >
+                            Your tour guides
+                        </h2>
+                        {
+                            tour?.guides.map((guide: any) => (
+                                <div class="flex items-center text-2xl mb-9">
+                                    <img
+                                        class="mr-5 h-14 w-14 rounded-full"
+                                        src={`${getBackendUrl()}/img/users/${guide.photo}`}
+                                        alt={guide.name}
+                                    />
+                                    <span class="mr-9 font-bold uppercase text-lg">{guide.role}</span>
+                                    <span class="capitalize">{guide.name}</span>
+                                </div>
+                            ))
+                        }
                     </div>
-                    <div class="flex items-center text-2xl mb-9">
-                        <svg class="mr-5 h-9 w-9 text-green-500">
-                            <use xlink:href="/img/icons.svg#icon-trending-up"></use>
-                        </svg>
-                        <span class="mr-9 font-bold uppercase text-lg">Difficulty</span>
-                        <span class="capitalize">{tour?.difficulty}</span>
-                    </div>
-                    <div class="flex items-center text-2xl mb-9">
-                        <svg class="mr-5 h-9 w-9 text-green-500">
-                            <use xlink:href="/img/icons.svg#icon-user"></use>
-                        </svg>
-                        <span class="mr-9 font-bold uppercase text-lg">Participants</span>
-                        <span class="capitalize">{tour?.maxGroupSize} people</span>
-                    </div>
-                    <div class="flex items-center text-2xl mb-9">
-                        <svg class="mr-5 h-9 w-9 text-green-500">
-                            <use xlink:href="/img/icons.svg#icon-star"></use>
-                        </svg>
-                        <span class="mr-9 font-bold uppercase text-lg">Rating</span>
-                        <span class="capitalize">{tour?.ratingsAverage} / 5</span>
-                    </div>
-                </div>
-
-                <div class="mt-28">
-                    <h2
-                        class="mb-14 text-3xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-green-600"
-                    >
-                        Your tour guides
-                    </h2>
-                    {
-                        tour?.guides.map((guide: any) => (
-                            <div class="flex items-center text-2xl mb-9">
-                                <img
-                                    class="mr-5 h-14 w-14 rounded-full"
-                                    src={`${getBackendUrl()}/img/users/${guide.photo}`}
-                                    alt={guide.name}
-                                />
-                                <span class="mr-9 font-bold uppercase text-lg">{guide.role}</span>
-                                <span class="capitalize">{guide.name}</span>
-                            </div>
-                        ))
-                    }
                 </div>
             </div>
-
-            <div class="flex-1">
-                <h2
-                    class="mb-14 text-3xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-green-600"
-                >
-                    About {tour.name} tour
-                </h2>
-                {tour?.description.split('\n').map((paragraph: any) => <p class="text-2xl mb-8">{paragraph}</p>)}
+            <div class="flex-1 bg-zinc-100 py-32 relative content-center min-h-100vh">
+                <div class="relative content-center mx-8">
+                    <h2
+                        class="mb-14 text-3xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-primary to-primary"
+                    >
+                        About {tour.name} tour
+                    </h2>
+                    {tour?.description.split('\n').map((paragraph: any) => <p class="text-2xl mb-8">{paragraph}</p>)}
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="flex clip-path-tour mt-[-9vw] relative z-10">
+    <section class="flex clip-path-tour mt-[-9vw] relative z-20">
         {
             tour?.images.map((image: any, i: number) => (
                 <div class="w-full">
@@ -149,7 +147,7 @@ export const prerender = false;
         }
     </section>
 
-    <section class="relative h-[35rem] mt-[-9vw]">
+    <section class="relative h-[35rem] mt-[-9vw] z-10 clip-path-tour">
         <LeafletMap
             latitude={tour?.startLocation?.coordinates[1] || 0}
             longitude={tour?.startLocation?.coordinates[0] || 0}
@@ -161,49 +159,96 @@ export const prerender = false;
         />
     </section>
 
+    <section class="mt-[-9vw] py-32 relative bg-gradient-to-br from-primary to-primary/85 clip-path-tour">
+        <div class="max-w-[calc(100%-12rem)] mx-auto py-12">
+            <h2
+                class="mb-14 text-3xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-white to-white text-center"
+            >
+                Reviews
+            </h2>
+            <div class="flex overflow-x-auto gap-12 py-8 w-full">
+                {
+                    tour?.reviews?.map((review: any) => (
+                        <div class="min-w-[30rem] p-12 bg-gray-50 rounded-lg shadow-xl snap-center flex flex-col items-center">
+                            <div class="flex items-center mb-8">
+                                <img
+                                    class="h-16 w-16 rounded-full mr-6"
+                                    src={`${getBackendUrl()}/img/users/${review.user.photo}`}
+                                    alt={review.user.name}
+                                />
+                                <h6 class="text-lg font-bold uppercase">{review.user.name}</h6>
+                            </div>
+                            <p class="text-gray-600 mb-8 text-lg italic">{review.review}</p>
+                            <div class="flex mt-auto">
+                                {[1, 2, 3, 4, 5].map((star) => (
+                                    <svg
+                                        class={`h-8 w-8 ${review.rating >= star ? 'text-yellow-400' : 'text-gray-300'}`}
+                                    >
+                                        <use xlink:href="/img/icons.svg#icon-star" fill="currentColor" />
+                                    </svg>
+                                ))}
+                            </div>
+                        </div>
+                    ))
+                }
+            </div>
+        </div>
+    </section>
+
     <section class="mt-[-9vw] bg-gray-100 px-12 pb-44 pt-[calc(15rem+9vw)]">
-        <div class="relative max-w-[105rem] mx-auto overflow-hidden bg-white p-24 rounded-3xl shadow-2xl">
+        <div class="relative max-w-[60rem] mx-auto overflow-hidden bg-white p-24 rounded-3xl shadow-2xl">
             <div
-                class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-[35%] z-10 h-60 w-60 rounded-full bg-gradient-to-br from-green-400 to-green-600 p-8 flex items-center justify-center shadow-lg"
+                class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-[50%] z-10 h-40 w-40 rounded-full bg-gradient-to-br from-primary to-primary p-8 flex items-center justify-center shadow-lg"
             >
                 <img src={`/img/logo-white.png`} alt="Natours logo" class="w-full" />
             </div>
             <img
-                class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-[10%] scale-97 z-[9] h-60 w-60 rounded-full shadow-lg"
+                class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-[10%] scale-97 z-[9] h-40 w-40 rounded-full shadow-lg"
                 src={`${getBackendUrl()}/img/tours/${tour?.images[1]}`}
                 alt="Tour Picture"
             />
             <img
-                class="absolute left-0 top-1/2 -translate-y-1/2 translate-x-[15%] scale-94 z-8 h-60 w-60 rounded-full shadow-lg"
+                class="absolute left-0 top-1/2 -translate-y-1/2 translate-x-[15%] scale-94 z-8 h-40 w-40 rounded-full shadow-lg"
                 src={`${getBackendUrl()}/img/tours/${tour?.images[2]}`}
                 alt="Tour Picture"
             />
             <div class="grid grid-cols-[1fr_auto] grid-rows-[auto_auto] gap-3 items-center">
-                <h2
-                    class="text-3xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-green-600"
-                >
-                    What are you waiting for?
-                </h2>
-                <p class="text-2xl">
-                    {tour?.duration} days. 1 adventure. Infinite memories. Make it yours today!
-                </p>
+                <div class="col-span-2 ml-24">
+                    <h2
+                        class="text-2xl font-bold uppercase text-transparent bg-clip-text bg-gradient-to-r from-primary to-primary"
+                    >
+                        What are you waiting for?
+                    </h2>
+                    <p class="text-lg">
+                        {tour?.duration} days. 1 adventure. Infinite memories. Make it yours today!
+                    </p>
+                </div>
 
                 {
-                    tour?.isBooked ? (
+                    user && tour?.isBooked ? (
                         <button
-                            class="col-span-2 rounded-full bg-green-500 px-12 py-6 text-2xl font-medium text-white uppercase shadow-lg transition-all hover:-translate-y-1 hover:shadow-xl"
+                            class="col-3 rounded-full bg-primary px-12 py-6 text-xl font-medium text-white uppercase shadow-lg transition-all hover:-translate-y-1 hover:shadow-xl cursor-pointer"
                             id="book-tour"
                             data-tour-id={tour?.id}
                         >
                             You Already Booked
                         </button>
-                    ) : (
+                    ) : user ? (
                         <button
-                            class="col-span-2 rounded-full bg-green-500 px-12 py-6 text-2xl font-medium text-white uppercase shadow-lg transition-all hover:-translate-y-1 hover:shadow-xl"
+                            class="col-3 rounded-full bg-primary px-12 py-6 text-xl font-medium text-white uppercase shadow-lg transition-all hover:-translate-y-1 hover:shadow-xl cursor-pointer"
                             id="book-tour"
                             data-tour-id={tour?.id}
                         >
                             Book tour now!
+                        </button>
+                    ) : (
+                        <button
+                            class="col-3 rounded-full bg-primary px-12 py-6 text-xl font-medium text-white uppercase shadow-lg transition-all hover:-translate-y-1 hover:shadow-xl cursor-pointer"
+                            id="book-tour"
+                            data-tour-id={tour?.id}
+                            onclick={`window.location.href = '/login';`}
+                        >
+                            Login to book tour
                         </button>
                     )
                 }
