--- a/apps/fita-a-fita-frontend/src/styles/global.css
+++ b/apps/fita-a-fita-frontend/src/styles/global.css
@@ -1,1 +1,14 @@
 @import 'tailwindcss';
+
+@theme {
+    --color-primary: #728247;
+}
+
+body {
+    background-color: #f7f7f7;
+    padding: 20px;
+}
+
+.clip-path-tour {
+    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 9vw), 0 100%);
+}
