feat: enhance user authentication and profile management; add new user settings page, update login flow, and improve session handling

--- a/apps/fita-a-fita-frontend/src/components/UserLoged.astro
+++ b/apps/fita-a-fita-frontend/src/components/UserLoged.astro
@@ -3,7 +3,7 @@ import { getBackendUrl } from '../utils/env';
 
 const response = (await Astro.session?.get('user')) || null;
 
-const user = response?.data;
+const user = response;
 ---
 
 <script>
