--- a/apps/fita-a-fita-frontend/src/components/Tours.astro
+++ b/apps/fita-a-fita-frontend/src/components/Tours.astro
@@ -1,10 +1,18 @@
 ---
+interface Props {
+    url: string;
+}
+
 import { getBackendUrl } from '../utils/env';
 
-// TODO: get tours from backend using fetch depending on the environment (local or docker)  
-let url = getBackendUrl() + '/';
+const { url } = Astro.props as Props;
+const jwt = await Astro.cookies.get('jwt')?.value || '';
 
-const tours = await fetch(url).then((res) =>res.json()).then((data) => data.tours).catch((err) => {
+const tours = await fetch(url, {
+    headers: {
+        Cookie: `jwt=${jwt}`,
+    },
+}).then((res) => res.json()).then((data) => data.tours).catch((err) => {
     console.error(err);
     return [];
 });
