--- a/apps/fita-a-fita-frontend/src/pages/my-tours.astro
+++ b/apps/fita-a-fita-frontend/src/pages/my-tours.astro
@@ -7,7 +7,7 @@ import { getBackendUrl } from '../utils/env';
 <Layout>
     <main class="py-16 px-8">
         <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <Tours server:defer url={getBackendUrl() + '/'} />
+            <Tours server:defer url={getBackendUrl() + '/my-tours'} />
         </div>
     </main>
 </Layout>
