--- a/apps/fita-a-fita-frontend/src/pages/login.astro
+++ b/apps/fita-a-fita-frontend/src/pages/login.astro
@@ -12,6 +12,7 @@ export const prerender = false;
 
 <script>
     import { actions } from 'astro:actions';
+    import { generateToast } from '../utils/toast';
     const login = async (e: Event) => {
         e.preventDefault();
         const formData = new FormData(form);
@@ -20,8 +21,16 @@ export const prerender = false;
             password: formData.get('password') as string,
         });
 
+        console.log(data, error);
+
         if (data?.success) {
-            redirect('/');
+            generateToast(data?.message || 'Login successful', 'success');
+
+            setTimeout(() => {
+                redirect('/');
+            }, 1500);
+        } else {
+            generateToast(data?.message || error || 'Something went wrong', 'error');
         }
     };
 
