feat: implement email confirmation and password reset functionality; add new email templates and enhance user signup experience with toast notifications

--- a/apps/fita-a-fita-frontend/src/layouts/Header.astro
+++ b/apps/fita-a-fita-frontend/src/layouts/Header.astro
@@ -9,7 +9,7 @@ import UserLoged from '../components/UserLoged.astro';
             <a href="/" class="text-white text-lg font-medium hover:text-green-200 transition-colors">ALL TOURS</a>
         </div>
 
-        <div class="absolute left-1/2 top-4 -translate-x-1/2">
+        <div class="absolute left-1/2 top-4 -translate-x-1/2 hidden md:block">
             <img src="/img/logo-white.png" alt="Fita a Fita logo" class="h-16" />
         </div>
 
