--- a/apps/fita-a-fita-frontend/src/pages/me.astro
+++ b/apps/fita-a-fita-frontend/src/pages/me.astro
@@ -63,17 +63,17 @@ export const prerender = false;
 
 <Layout>
     <main class="bg-gray-50 min-h-screen py-12">
-        <div class="max-w-5xl mx-auto bg-white rounded shadow-xl flex overflow-hidden">
+        <div class="max-w-5xl mx-auto bg-white rounded shadow-xl flex flex-col md:flex-row overflow-hidden">
             {/* Sidebar */}
-            <nav class="flex-shrink-0 w-[32rem] bg-gradient-to-br from-primary to-primary/60 py-16 px-0">
+            <nav class="flex-shrink-0 w-full md:w-[32rem] bg-gradient-to-br from-primary to-primary/60 py-16 px-0">
                 <ul class="side-nav">
-                    <NavItem href="/me" text="Settings" icon="settings" active={true} />
+                    <NavItem href="/me" text="Settings" icon="settings" />
                     <NavItem href="/my-tours" text="My bookings" icon="briefcase" />
                     <NavItem href="#" text="My reviews" icon="star" />
                     <NavItem href="#" text="Billing" icon="credit-card" />
                 </ul>
                 {
-                    user?.role === 'admin' && (
+                    (user?.role === 'admin' || user?.role === 'lead-guide') && (
                         <div class="admin-nav mt-14">
                             <ul class="side-nav">
                                 <NavItem href="/my-tours" text="Manage tours" icon="map" />
