feat: add user management features; implement user listing page in frontend, enhance backend API to retrieve all users, and update routes for admin access

--- a/apps/fita-a-fita-frontend/src/pages/me.astro
+++ b/apps/fita-a-fita-frontend/src/pages/me.astro
@@ -111,7 +111,7 @@ export const prerender = false;
                             <ul class="side-nav">
                                 <NavItem href="/my-tours" text="Manage tours" icon="map" />
                                 <NavItem href="/create-tour" text="Create tour" icon="map" />
-                                <NavItem href="#" text="Manage users" icon="users" />
+                                <NavItem href="/allusers" text="Manage users" icon="users" />
                                 <NavItem href="#" text="Manage reviews" icon="star" />
                                 <NavItem href="#" text="Manage bookings" icon="briefcase" />
                             </ul>
